# four_wheel_steering_controller

./: CMakeLists.txt  README.md  four_wheel_steering_controller_plugin.xml  package.xml
include/four_wheel_steering_controller/: four_wheel_steering_controller.hpp  four_wheel_steering_model.hpp  model.hpp
src/: four_wheel_steering_controller.cpp  model.cpp
test/: test_four_wheel_steering_controller.cpp  test_four_wheel_steering_model.cpp
test/config/: test_four_wheel_steering_controller.yaml
