<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>four_wheel_steering_controller</name>
  <version>0.1.0</version>
  <description>ROS2 controller implement of four wheel steering kinematics</description>
  <maintainer email="marcel.zeilinger@ait.ac.at">Marcel Zeilinger</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>four_wheel_steering_msgs</depend>
  <depend>realtime_tools</depend>
  <build_depend>pluginlib</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
